--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "new-reason", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
 }
 
 
@@ -24,7 +24,7 @@ body {
 }
 
 .teaser {
-  font-family: "new-reason", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
 }
 
 
@@ -48,11 +48,11 @@ body {
 }
 
 .publication-title {
-    font-family: "new-reason", sans-serif;
+    font-family: "freight-sans-pro", sans-serif;
 }
 
 .publication-authors {
-    font-family: "new-reason", sans-serif;
+    font-family: "freight-sans-pro", sans-serif;
 }
 
 .publication-venue {
